Fixed tooltip appearing behind some elements

--- a/src/sass/X/system_popups/activities_menu.sass
+++ b/src/sass/X/system_popups/activities_menu.sass
@@ -159,5 +159,6 @@
             transform: scale(0.9)
             filter: brightness(1)
             box-shadow: none
+            z-index: unset
             &:hover
                 box-shadow: 0px 0px 3px 8px var(--color-accent-400)
